frontend/test/should_fail/map_001.grg
using map_model_001;

rule assignWrongType {
	a:A;

	modify {
		eval {
			a.intValue = a.intToString[5];
		}
	}
}
